合并接口
