# controller/userRegisterController.go
@@ -14,6 +14,33 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// 返回结构体
+type UserRegisterRespStruct struct {
+	Code   int    `json:"status_code"`
+	Msg    string `json:"status_msg"`
+	UserId uint64 `json:"user_id"`
+	Token  string `json:"token"`
+}
+
+// 传入参数返回
+func UserRegisterResp(c *gin.Context, code int, msg string, userId uint64, token string) {
+	h := &UserRegisterRespStruct{
+		Code:   code,
+		Msg:    msg,
+		UserId: userId,
+		Token:  token,
+	}
+
+	c.JSON(http.StatusOK, h)
+}
+
+// UserRegister
+// @Summary 用户注册
+// @Tags 基础接口
+// @Param username query string true "username"
+// @Param password query string true "password"
+// @Success 200 {string} status_code status_msg
+// @Router /user/register/ [post]
 func UserRegister(c *gin.Context) {
 	username := c.Query("username")
 	password := c.Query("password")
@@ -22,17 +49,12 @@ func UserRegister(c *gin.Context) {
 		Username: string(username),
 		Password: string(password),
 	}
-	registerResponse, err := service.PostUserRegister(c, &req)
 
+	registerResponse, err := service.PostUserRegister(c, &req)
 	if err != nil {
-		c.JSON(http.StatusOK, gin.H{
-			"status_code": -1,
-			"status_msg":  err.Error(),
-		})
+		UserRegisterResp(c, -1, err.Error(), 0, "")
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{
-		"status_code": 0,
-		"Identity":    &registerResponse.Identity,
-	})
+
+	UserRegisterResp(c, 0, "注册成功", registerResponse.Identity, registerResponse.Token)
 }
