# docs/swagger.json
@@ -9,7 +9,7 @@
                 "tags": [
                     "基础接口"
                 ],
-                "summary": "视频流",
+                "summary": "视频流接口",
                 "parameters": [
                     {
                         "type": "string",
@@ -28,7 +28,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controller.FeedVideoRespStruct"
                         }
                     }
                 }
@@ -94,7 +94,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "视频发布列表接口",
+                "tags": [
+                    "基础接口"
+                ],
+                "summary": "发布列表",
                 "parameters": [
                     {
                         "type": "string",
@@ -255,9 +258,125 @@
                     }
                 }
             }
+        },
+        "/user/": {
+            "get": {
+                "tags": [
+                    "基础接口"
+                ],
+                "summary": "用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.UserInfoRespStruct"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/login/": {
+            "post": {
+                "tags": [
+                    "基础接口"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.UserLoginRespStruct"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register/": {
+            "post": {
+                "tags": [
+                    "基础接口"
+                ],
+                "summary": "用户注册",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "controller.FeedVideoRespStruct": {
+            "type": "object",
+            "properties": {
+                "next_time": {
+                    "type": "integer"
+                },
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                },
+                "video_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/service.VideoInfo"
+                    }
+                }
+            }
+        },
         "controller.FirendListRespStruct": {
             "type": "object",
             "properties": {
@@ -332,7 +451,7 @@
                 "video_list": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/service.Video"
+                        "$ref": "#/definitions/service.VideoInfo"
                     }
                 }
             }
@@ -348,22 +467,50 @@
                 }
             }
         },
+        "controller.UserInfoRespStruct": {
+            "type": "object",
+            "properties": {
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/service.Author"
+                }
+            }
+        },
+        "controller.UserLoginRespStruct": {
+            "type": "object",
+            "properties": {
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "service.Author": {
             "type": "object",
             "properties": {
                 "follow_count": {
-                    "description": "default",
                     "type": "integer"
                 },
                 "follower_count": {
-                    "description": "default",
                     "type": "integer"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "is_follow": {
-                    "description": "defalut",
                     "type": "boolean"
                 },
                 "name": {
@@ -391,31 +538,43 @@
                 }
             }
         },
-        "service.Video": {
+        "service.VideoInfo": {
             "type": "object",
             "properties": {
                 "author": {
-                    "$ref": "#/definitions/service.Author"
+                    "description": "作者信息",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/service.Author"
+                        }
+                    ]
                 },
                 "comment_count": {
+                    "description": "评论数",
                     "type": "integer"
                 },
                 "cover_url": {
+                    "description": "封面路径",
                     "type": "string"
                 },
                 "favorite_count": {
+                    "description": "点赞数",
                     "type": "integer"
                 },
                 "id": {
+                    "description": "视频唯一标识",
                     "type": "integer"
                 },
                 "is_favorite": {
+                    "description": "是否点赞",
                     "type": "boolean"
                 },
                 "play_url": {
+                    "description": "视频路径",
                     "type": "string"
                 },
                 "title": {
+                    "description": "视频标题",
                     "type": "string"
                 }
             }
